fix: Fixed the issue where `overlay` is in the wrong position when the parent element contains `zoom` (#198)

--- a/playground/rollup-vue2/src/style.css
+++ b/playground/rollup-vue2/src/style.css
@@ -54,6 +54,11 @@ button:focus-visible {
 
 .card {
   padding: 2em;
+  zoom: 2;
+}
+
+.card > div {
+  zoom: 0.5;
 }
 
 #app {
